# STC_Project

./: CMakeLists.txt  README.md
ByteProccess/: ByteProccess.cpp  CMakeLists.txt
ByteProccess/Private/: ByteProccessor.cpp
ByteProccess/Public/: ByteProccessor.h  ByteProcessor.h  Source.h
ByteProcess/: CMakeLists.txt
ByteProcess/Private/: ByteProcessor.cpp
ByteProcess/Public/: Sink.h
Testing/: CMakeLists.txt  MainTesting.cpp  Mock.h  Testing.h
